fix : navbar style on safari

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -27,6 +27,7 @@
             display: flex;
             justify-content: center;
             gap: 25%;
+            padding: 0 30px;
 
         }
     }
